--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p>Har ingen utbildning genom skolan för jag hoppade av i tidig ålder men har lärt mig mycket på egen hand och nu har jag en pågående utbildning inom programmering.</p>
             </li>
             <li>
-                <p>Har jobbat lager som truckförare och även orderplock och även som maskinoperatör.</p>
+                <p>Har jobbat på lager som truckförare och även orderplock och även som maskinoperatör.</p>
             </li>
         </nav>
         <main class="main">
